--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     ]
   },
   "dependencies": {
+    "add": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "sass": "^1.68.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
