feat: main page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@components/*": ["./components/*"]
     }
   },
+  "types": ["vite-plugin-svgr/client"],
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
