--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "add": "^2.0.6",
+    "axios": "^1.5.1",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
     "sass": "^1.68.0",
     "yarn": "^1.22.19"
@@ -50,6 +54,8 @@
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
+    "vite-plugin-react-svg": "^0.2.0",
+    "vite-plugin-svgr": "^4.0.0",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
